documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long BASEADDR;
typedef unsigned long SUBFRMADDR;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

L43W32API ERRVAL __stdcall L43_SchedInsert(ULONG events,ULONG index,ULONG msgnum,LPMSGADDR msgaddr,ULONG gapval,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedInsertEnd(ULONG events,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedInsertStart(ULONG events,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedIntEx(USHORT condition1,USHORT condition2,USHORT tagval,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_SchedLayout(VOID);

L43W32API ULONG __stdcall L43_SchedMaxval(LPULONG array,ULONG arraycount);

L43W32API ULONG __stdcall L43_SchedMinval(LPULONG array,ULONG arraycount);

L43W32API SCHNDX __stdcall L43_SchedNop(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedParse(INT basemsgnum,LPMSGADDR msgaddr,INT channum,HCARD handleval);

L43W32API VOID __stdcall L43_SchedPrint(LPSTR str,...);

L43W32API SCHNDX __stdcall L43_SchedPulse0(INT dionum,INT channum,HCARD handleval);

L43W32API SCHNDX __stdcall L43_SchedPulse1(INT dionum,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SchedReset(VOID);

L43W32API ULONG __stdcall L43_SchedRotate(VOID);

L43W32API INT __stdcall L43_SchedShift(INT msgnum,INT value);

L43W32API ERRVAL __stdcall L43_SchedSlide(VOID);

L43W32API VOID __stdcall L43_SchedSlideEnd(VOID);

L43W32API VOID __stdcall L43_SchedSlideMiddle(ULONG index,ULONG count,ULONG conflicts);

L43W32API VOID __stdcall L43_SchedSlideStart(ULONG factor);

L43W32API VOID __stdcall L43_SchedSort(VOID);

L43W32API ULONG __stdcall L43_SchedToBit(ULONG value);

L43W32API ULONG __stdcall L43_SchedToMsec(ULONG value);

L43W32API VOID __stdcall L43_SchedUnsort(VOID);

L43W32API SCHNDX __stdcall L43_SchedUser(ULONG useraddr,INT channum,HCARD handleval);

L43W32API ULONG __stdcall L43_SchedWalk(VOID);

L43W32API ERRVAL __stdcall L43_SEEPokeW(INT value,INT numbits,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SEERdBit(LPINT valueptr,INT bitnum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SEERdL(LPULONG valueptr,INT addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SEERdW(LPINT valueptr,INT addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SEEWrBit(INT value,INT bitnum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SEEWrL(ULONG value,INT addrval,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SEEWrW(INT value,INT addrval,HCARD handleval);

L43W32API USHORT __stdcall L43_SEMMRdW(ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_SEMMWrW(USHORT value,ULONG addrval,HCARD handleval);

L43W32API USHORT __stdcall L43_SEMRdW(ULONG addrval,HCARD handleval);

L43W32API VOID __stdcall L43_SEMWrW(USHORT value,ULONG addrval,HCARD handleval);

L43W32API ULONG __stdcall L43_SeqBlkRd(LPUSHORT buf,ULONG bufcount,LPULONG blkcnt,HCARD handleval);

L43W32API ULONG __stdcall L43_SeqBlkRdEx(LPUSHORT buf,ULONG bufcount,ULONG maxblkcnt,LPULONG blkcnt,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SeqClear(HCARD handleval);

L43W32API ERRVAL __stdcall L43_SeqConfigEx(ULONG configval,ULONG seqcount,USHORT cardnum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SeqConfigExx(ULONG configval,ULONG seqaddr,ULONG seqcount,USHORT cardnum,HCARD handleval);

L43W32API USHORT __stdcall L43_SeqIntervalEx(USHORT shiftval,HCARD handleval);

L43W32API USHORT __stdcall L43_SeqRdEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);

L43W32API BOOL __stdcall L43_SeqResume(HCARD handleval);

L43W32API BOOL __stdcall L43_SeqStart(HCARD handleval);

L43W32API BOOL __stdcall L43_SeqStop(HCARD handleval);

L43W32API ULONG __stdcall L43_Shl(ULONG dataval,INT cntval);

L43W32API ULONG __stdcall L43_Shr(ULONG dataval,INT cntval);

L43W32API USHORT __stdcall L43_SignMant(LPCSTR str);

L43W32API SUBFRMADDR __stdcall L43_SubFrmAddr(INT subframe,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SubFrmCreate(ULONG configval,INT subframe,BASEADDR chanbase,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SubFrmReset(INT subframe,INT channum,HCARD handleval);

L43W32API BASEADDR __stdcall L43_SuperFrmBaseAddr(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SuperFrmConfigEx(ULONG configval,INT count,INT framespersuperframe,INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SuperFrmReset(INT channum,HCARD handleval);

L43W32API ERRVAL __stdcall L43_SyncValPtrInit(INT channum,HCARD handleval);

L43W32API USHORT __stdcall L43_TimerResolutionEx(USHORT timershift,HCARD handleval);

L43W32API USHORT __stdcall L43_Transpose12(USHORT val);

L43W32API INT __stdcall L43_ValAsciiCmpi(LPSTR str1,LPSTR str2);

L43W32API LPSTR __stdcall L43_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

L43W32API VOID __stdcall L43_ValAsciiTrimLead(LPSTR buf);

L43W32API VOID __stdcall L43_ValAsciiTrimTrail(LPSTR buf);

L43W32API ULONG __stdcall L43_ValFromAscii(LPCSTR asciistr,INT radixval);

L43W32API ULONG __stdcall L43_ValGetBits(ULONG oldvalue,INT startbit,INT endbit);

L43W32API LPSTR __stdcall L43_ValIncAscii(LPSTR asciistr);

L43W32API LPSTR __stdcall L43_ValInccAscii(LPSTR asciistr);

L43W32API BOOL __stdcall L43_ValIsLower(INT value);

L43W32API INT __stdcall L43_ValLenAscii(INT numbits,INT radixval);

L43W32API ULONG __stdcall L43_ValPutBits(ULONG oldvalue,ULONG newfld,INT startbit,INT endbit);

L43W32API LPSTR __stdcall L43_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

L43W32API INT __stdcall L43_ValToUpper(INT value);

#define CH0	    0x0000					//Channel 0
#define CH1	    0x0001					//Channel 1
#define CH2	    0x0002					//Channel 2
#define CH3	    0x0003					//Channel 3
#define CH4	    0x0004					//Channel 4
#define CH5	    0x0005					//Channel 5
#define CH6	    0x0006					//Channel 6
#define CH7	    0x0007					//Channel 7

#define SDI00   0x0001					//Enable SDI00
#define SDI01   0x0002					//Enable SDI01
#define SDI10   0x0004					//Enable SDI10
#define SDI11   0x0008					//Enable SDI11
#define SDIALL  0x000F					//Enable all SDIs

#define SUBFRM1    0x0001               //Sub Frame 1 (717)
#define SUBFRM2    0x0002               //Sub Frame 2 (717)
#define SUBFRM3    0x0003               //Sub Frame 3 (717)
#define SUBFRM4    0x0004               //Sub Frame 4 (717)