documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.VB

    Public Declare Function L43_SchedInsert Lib "L43W32.DLL" Alias "_L43_SchedInsert@28" (ByVal eventvals As UInt32, ByVal index As UInt32, ByVal msgnum As UInt32, ByRef msgaddr As UInt32, ByVal gapval As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedInsertEnd Lib "L43W32.DLL" Alias "_L43_SchedInsertEnd@12" (ByVal eventvals As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedInsertStart Lib "L43W32.DLL" Alias "_L43_SchedInsertStart@12" (ByVal eventvals As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedIntEx Lib "L43W32.DLL" Alias "_L43_SchedIntEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_SchedLayout Lib "L43W32.DLL" Alias "_L43_SchedLayout@0" ()
    Public Declare Function L43_SchedMaxval Lib "L43W32.DLL" Alias "_L43_SchedMaxval@8" (ByRef arrayval As UInt32, ByVal arrayvalcount As UInt32) As UInt32
    Public Declare Function L43_SchedMinval Lib "L43W32.DLL" Alias "_L43_SchedMinval@8" (ByRef arrayval As UInt32, ByVal arrayvalcount As UInt32) As UInt32
    Public Declare Function L43_SchedNop Lib "L43W32.DLL" Alias "_L43_SchedNop@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedParse Lib "L43W32.DLL" Alias "_L43_SchedParse@16" (ByVal basevalmsgnum As Int32, ByRef msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_SchedPrint Lib "L43W32.DLL" Alias "" (ByVal ParamArray list() As String)
    Public Declare Function L43_SchedPulse0 Lib "L43W32.DLL" Alias "_L43_SchedPulse0@12" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedPulse1 Lib "L43W32.DLL" Alias "_L43_SchedPulse1@12" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedReset Lib "L43W32.DLL" Alias "_L43_SchedReset@0" () As Int32
    Public Declare Function L43_SchedRotate Lib "L43W32.DLL" Alias "_L43_SchedRotate@0" () As UInt32
    Public Declare Function L43_SchedShift Lib "L43W32.DLL" Alias "_L43_SchedShift@8" (ByVal msgnum As Int32, ByVal value As Int32) As Int32
    Public Declare Function L43_SchedSlide Lib "L43W32.DLL" Alias "_L43_SchedSlide@0" () As Int32
    Public Declare Sub L43_SchedSlideEnd Lib "L43W32.DLL" Alias "_L43_SchedSlideEnd@0" ()
    Public Declare Sub L43_SchedSlideMiddle Lib "L43W32.DLL" Alias "_L43_SchedSlideMiddle@12" (ByVal index As UInt32, ByVal count As UInt32, ByVal conflicts As UInt32)
    Public Declare Sub L43_SchedSlideStart Lib "L43W32.DLL" Alias "_L43_SchedSlideStart@4" (ByVal factor As UInt32)
    Public Declare Sub L43_SchedSort Lib "L43W32.DLL" Alias "_L43_SchedSort@0" ()
    Public Declare Function L43_SchedToBit Lib "L43W32.DLL" Alias "_L43_SchedToBit@4" (ByVal value As UInt32) As UInt32
    Public Declare Function L43_SchedToMsec Lib "L43W32.DLL" Alias "_L43_SchedToMsec@4" (ByVal value As UInt32) As UInt32
    Public Declare Sub L43_SchedUnsort Lib "L43W32.DLL" Alias "_L43_SchedUnsort@0" ()
    Public Declare Function L43_SchedUser Lib "L43W32.DLL" Alias "_L43_SchedUser@12" (ByVal useraddr As UInt32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SchedWalk Lib "L43W32.DLL" Alias "_L43_SchedWalk@0" () As UInt32
    Public Declare Function L43_SEEPokeW Lib "L43W32.DLL" Alias "_L43_SEEPokeW@12" (ByVal value As Int32, ByVal numbits As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SEERdBit Lib "L43W32.DLL" Alias "_L43_SEERdBit@12" (ByRef valueptr As Int32, ByVal bitnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SEERdL Lib "L43W32.DLL" Alias "_L43_SEERdL@12" (ByRef valueptr As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SEERdW Lib "L43W32.DLL" Alias "_L43_SEERdW@12" (ByRef valueptr As Int32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SEEWrBit Lib "L43W32.DLL" Alias "_L43_SEEWrBit@12" (ByVal value As Int32, ByVal bitnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SEEWrL Lib "L43W32.DLL" Alias "_L43_SEEWrL@12" (ByVal value As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SEEWrW Lib "L43W32.DLL" Alias "_L43_SEEWrW@12" (ByVal value As Int32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SEMMRdW Lib "L43W32.DLL" Alias "_L43_SEMMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_SEMMWrW Lib "L43W32.DLL" Alias "_L43_SEMMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_SEMRdW Lib "L43W32.DLL" Alias "_L43_SEMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_SEMWrW Lib "L43W32.DLL" Alias "_L43_SEMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_SeqBlkRd Lib "L43W32.DLL" Alias "_L43_SeqBlkRd@16" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_SeqBlkRdEx Lib "L43W32.DLL" Alias "_L43_SeqBlkRdEx@20" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByVal maxblkcnt As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_SeqClear Lib "L43W32.DLL" Alias "_L43_SeqClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SeqConfigEx Lib "L43W32.DLL" Alias "_L43_SeqConfigEx@16" (ByVal configval As UInt32, ByVal seqcount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SeqConfigExx Lib "L43W32.DLL" Alias "_L43_SeqConfigExx@20" (ByVal configval As UInt32, ByVal seqaddr As UInt32, ByVal seqcount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SeqIntervalEx Lib "L43W32.DLL" Alias "_L43_SeqIntervalEx@8" (ByVal shiftval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_SeqRdEx Lib "L43W32.DLL" Alias "_L43_SeqRdEx@12" (ByRef buf As UInt16, ByVal bufcount As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_SeqResume Lib "L43W32.DLL" Alias "_L43_SeqResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SeqStart Lib "L43W32.DLL" Alias "_L43_SeqStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SeqStop Lib "L43W32.DLL" Alias "_L43_SeqStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_Shl Lib "L43W32.DLL" Alias "_L43_Shl@8" (ByVal dataval As UInt32, ByVal cntval As Int32) As UInt32
    Public Declare Function L43_Shr Lib "L43W32.DLL" Alias "_L43_Shr@8" (ByVal dataval As UInt32, ByVal cntval As Int32) As UInt32
    Public Declare Function L43_SignMant Lib "L43W32.DLL" Alias "_L43_SignMant@4" (ByRef str As String) As UInt16
    Public Declare Function L43_SubFrmAddr Lib "L43W32.DLL" Alias "_L43_SubFrmAddr@12" (ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_SubFrmCreate Lib "L43W32.DLL" Alias "_L43_SubFrmCreate@16" (ByVal configval As UInt32, ByVal subframe As Int32, ByVal chanbase As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SubFrmReset Lib "L43W32.DLL" Alias "_L43_SubFrmReset@12" (ByVal subframe As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SuperFrmBaseAddr Lib "L43W32.DLL" Alias "_L43_SuperFrmBaseAddr@8" (ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_SuperFrmConfigEx Lib "L43W32.DLL" Alias "_L43_SuperFrmConfigEx@20" (ByVal configval As UInt32, ByVal count As Int32, ByVal framespersuperframe As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SuperFrmReset Lib "L43W32.DLL" Alias "_L43_SuperFrmReset@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_SyncValPtrInit Lib "L43W32.DLL" Alias "_L43_SyncValPtrInit@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_TimerResolutionEx Lib "L43W32.DLL" Alias "_L43_TimerResolutionEx@8" (ByVal timershift As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_Transpose12 Lib "L43W32.DLL" Alias "_L43_Transpose12@4" (ByVal val As UInt16) As UInt16
    Public Declare Function L43_ValAsciiCmpi Lib "L43W32.DLL" Alias "_L43_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function L43_ValAsciiCpy Lib "L43W32.DLL" Alias "_L43_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Int32) As UInt32
    Public Declare Sub L43_ValAsciiTrimLead Lib "L43W32.DLL" Alias "_L43_ValAsciiTrimLead@4" (ByRef buf As String)
    Public Declare Sub L43_ValAsciiTrimTrail Lib "L43W32.DLL" Alias "_L43_ValAsciiTrimTrail@4" (ByRef buf As String)
    Public Declare Function L43_ValFromAscii Lib "L43W32.DLL" Alias "_L43_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Int32) As UInt32
    Public Declare Function L43_ValGetBits Lib "L43W32.DLL" Alias "_L43_ValGetBits@12" (ByVal oldvalue As UInt32, ByVal startbit As Int32, ByVal endbit As Int32) As UInt32
    Public Declare Function L43_ValIncAscii Lib "L43W32.DLL" Alias "_L43_ValIncAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function L43_ValInccAscii Lib "L43W32.DLL" Alias "_L43_ValInccAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function L43_ValIsLower Lib "L43W32.DLL" Alias "_L43_ValIsLower@4" (ByVal value As Int32) As Int32
    Public Declare Function L43_ValLenAscii Lib "L43W32.DLL" Alias "_L43_ValLenAscii@8" (ByVal numbits As Int32, ByVal radixval As Int32) As Int32
    Public Declare Function L43_ValPutBits Lib "L43W32.DLL" Alias "_L43_ValPutBits@16" (ByVal oldvalue As UInt32, ByVal newfld As UInt32, ByVal startbit As Int32, ByVal endbit As Int32) As UInt32
    Public Declare Function L43_ValToAscii Lib "L43W32.DLL" Alias "_L43_ValToAscii@16" (ByVal value As UInt32, ByRef asciistr As String, ByVal numbits As Int32, ByVal radixval As Int32) As UInt32
    Public Declare Function L43_ValToUpper Lib "L43W32.DLL" Alias "_L43_ValToUpper@4" (ByVal value As Int32) As Int32

    Public Const CH0 As UInt16 = &H0 '//Channel 0
    Public Const CH1 As UInt16 = &H1 '//Channel 1
    Public Const CH2 As UInt16 = &H2 '//Channel 2
    Public Const CH3 As UInt16 = &H3 '//Channel 3
    Public Const CH4 As UInt16 = &H4 '//Channel 4
    Public Const CH5 As UInt16 = &H5 '//Channel 5
    Public Const CH6 As UInt16 = &H6 '//Channel 6
    Public Const CH7 As UInt16 = &H7 '//Channel 7

    Public Const SDI00 As UInt16 = &H1   '//Enable SDI00
    Public Const SDI01 As UInt16 = &H2   '//Enable SDI01
    Public Const SDI10 As UInt16 = &H4   '//Enable SDI10
    Public Const SDI11 As UInt16 = &H8   '//Enable SDI11
    Public Const SDIALL As UInt16 = &HF  '//Enable all SDIs

    Public Const SUBFRM1 As UInt16 = &H1 '//Sub Frame 1 (717)
    Public Const SUBFRM2 As UInt16 = &H2 '//Sub Frame 2 (717)
    Public Const SUBFRM3 As UInt16 = &H3 '//Sub Frame 3 (717)
    Public Const SUBFRM4 As UInt16 = &H4 '//Sub Frame 4 (717)

    '/**
    '*
    '*  Channel configuration options
    '*
    '**/
